[tool.poetry]
name = "thermostatter-api"
version = "0.1.10"
description = "thermostatter HTTP JSON API"
authors = ["WolfEYc <wolfeycode@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi-slim = "^0.111.0"
uvicorn = "^0.30.1"
opentelemetry-api = "^1.25.0"
opentelemetry-sdk = "^1.25.0"
opentelemetry-exporter-otlp-proto-http = "^1.25.0"
opentelemetry-instrumentation-fastapi = "^0.46b0"
colorlog = "^6.8.2"
python-dotenv = "^1.0.1"


[tool.poetry.scripts]
thermostatter-api = "thermostatter_api:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
